# eka_mcp_server

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
.github/workflows/: pypi-publish.yml
dxt-package/: manifest.json
src/eka_assist/: eka_mcp.py  mcp_server.py  models.py  server.py
src/eka_mcp_server/: constants.py  eka_client.py  eka_interface.py  eka_mcp.py  mcp_server.py  models.py  server.py
tests/: test_auth.py
