[project]
name = "eka_assist"
version = "0.1.0"
description = "Eka Assist MCP server, that is capable of recommending protocols for  different treatments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.3.0",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "pillow>=11.0.0"
]
[[project.authors]]
name = "praveenkumar"
email = "praveenkumar@eka.care"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
eka_assist = "eka_assist:main"
